src/objects/Score__c.object
<CustomObject>
    <description>The Score object stores user-generated data unique to every org.</description>
    <fields>
        <fullName>Point__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Study Point</label>
        <referenceTo>Point__c</referenceTo>
        <relationshipLabel>Scores</relationshipLabel>
        <relationshipName>Scores</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tries__c</fullName>
        <label>Tries</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Scores</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>isComplete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Complete</label>
        <type>Checkbox</type>
    </fields>
    <label>Score</label>
    <nameField>
        <displayFormat>RS-{0000}</displayFormat>
        <label>Score Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scores</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>